[package]
name = "reinforced"
version = "0.1.0"
authors = ["Krafi <jakub.havlicek5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-nn = { git = "https://github.com/Krafi2/rusty-nn.git", branch = "develop" }
random-fast-rng = "0.1.1"