[package]
name = "reinforced"
version = "0.1.0"
authors = ["Krafi <jakub.havlicek5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rand_pcg = "0.2.1"
# rusty-nn = { git = "https://github.com/Krafi2/rusty-nn.git", branch = "develop" }
rusty-nn = { path = "../rusty-nn" }

[dev-dependencies]
color-backtrace = "0.5.0"